# django-spaces-blog

./: setup.cfg
spaces_blog/: __init__.py  apps.py  decorators.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
spaces_blog/migrations/: 0001_initial.py  0002_auto_20160223_1545.py
spaces_blog/static/js/: admin_post_form.js
spaces_blog/static/spaces_blog/: spaces_blog.js
spaces_blog/templates/spaces_blog/: base.html  blog_list.html  create.html  detail.html  edit.html  history.html  icon.html  post_confirm_delete.html
spaces_blog/templates/spaces_blog/includes/: comments.html  form_errors.html  form_field.html  post.html
spaces_blog/templatetags/: blog_tags.py
